@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:                                              -*-text-*-
-Last modified at [$Date: 2002/04/13 00:50:20 $]
+Last modified at [$Date: 2002/04/16 05:43:08 $]
 
 Release:
 
@@ -51,8 +51,6 @@ RELEASE SHOWSTOPPERS:
 
     * Daedalus segfaults with 2.0.35
       Greg and Cliff are working on this.
-
-    * HTTP chunk reads fail to read the trailers.
 
 CURRENT VOTES:
 
